--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    font-family: Catamaran, Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -35,9 +35,9 @@ section {
     border-radius: 50%;
 }
 .hero h2, .hero h3 {
-    font-family:'Kaushan Script', Arial, Helvetica, sans-serif;
-    color: white;
-    text-shadow: 0px 0px 5px blue;
+    font-family: 'Poppins', sans-serif;
+    color: black;
+    text-shadow: 0px 0px 5px grey;
     margin-right: 10px ;
 }
 
